--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=hello-app
 
+spring.config.import=file:.env[.properties]
+
+
+
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/hello_app
 spring.datasource.username=${MYSQL_USER}
