build only boot jar (not a plain.jar)

--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+bootJar {
+    enabled = true
+}
+tasks.named('jar') { enabled = false }
