--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=hello-app
 
-spring.config.import=file:.env[.properties]
+spring.config.import=.env[.properties]
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_ENDPOINT}/hello_app
