fix env location 3

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     if: github.event.pull_request.merged == true
     env:
-      ENV_PATH: .env
+      ENV_PATH: ./src/main/resources/.env
     runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
